[tool.poetry]
name = "crypto-trait-viewer"
version = "0.1.0"
description = ""
authors = ["Steven Burman <steven.burman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.2.0"
altair = "^4.1.0"
arrow = "^1.2.1"
beautifulsoup4 = "^4.10.0"
streamlit-autorefresh = "^0.0.1"
altair-catplot = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
